Bug 1129088 - IonMonkey: Revert bug 1100685 and add a comment. r=jandem, a=sledru